--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -57,6 +57,33 @@
               </article>
             </div>
             <div class="panel-footer">
+
+              <div>
+                <a href="#"  data-toggle="modal" data-target="#myModal" >10 Likes</a> &nbsp;
+                
+                <!--Modal for likes-->
+                <div id="myModal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                  
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                    
+                        <div class="modal-body">
+                          <ul class="list-group">
+                            <li class="list-group-item"><img src="../../assets/user.jpg" class="rounded-circle">Richa Madhupriya</li>
+                            <li class="list-group-item"><img src="../../assets/user.jpg" class="rounded-circle">Aditya</li>
+                          </ul>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                  
+                    </div>
+                  </div>
+
+                <a href="#" >10 Comments</a>
+              </div><br/>
               <a href="#" class="btn btn-info btn-sm">
                 <span class="glyphicon glyphicon-thumbs-up"></span> Like
               </a> &nbsp; &nbsp;
