--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -59,31 +59,34 @@
             <div class="panel-footer">
 
               <div>
-                <a href="#"  data-toggle="modal" data-target="#myModal" >10 Likes</a> &nbsp;
-                
-                <!--Modal for likes-->
-                <div id="myModal" class="modal fade" role="dialog">
-                    <div class="modal-dialog">
-                  
-                      <!-- Modal content-->
-                      <div class="modal-content">
-                    
-                        <div class="modal-body">
-                          <ul class="list-group">
-                            <li class="list-group-item"><img src="../../assets/user.jpg" class="rounded-circle">Richa Madhupriya</li>
-                            <li class="list-group-item"><img src="../../assets/user.jpg" class="rounded-circle">Aditya</li>
-                          </ul>
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                      </div>
-                  
-                    </div>
-                  </div>
+                <a href="#" data-toggle="modal" data-target="#likes">10 Likes</a> &nbsp;
 
-                <a href="#" >10 Comments</a>
-              </div><br/>
+                <!--Modal for likes-->
+                <div id="likes" class="modal fade" role="dialog">
+                  <div class="modal-dialog modal-sm">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+
+                      <div class="modal-body">
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            <img src="../../assets/user.jpg" class="rounded-circle">Richa Madhupriya</li>
+                          <li class="list-group-item">
+                            <img src="../../assets/user.jpg" class="rounded-circle">Aditya</li>
+                        </ul>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+
+                <a href="#">10 Comments</a>
+              </div>
+              <br/>
               <a href="#" class="btn btn-info btn-sm">
                 <span class="glyphicon glyphicon-thumbs-up"></span> Like
               </a> &nbsp; &nbsp;
@@ -102,29 +105,31 @@
                   <button type="submit" class="btn btn-md btn-primary">POST</button>
                 </form>
                 <table>
-                    <tr rowspan="2">
-                      <td>
-                        <img src="../../assets/user.jpg" class="rounded-circle">
-                      </td>
-                      <td>
-                         Richa Madhupriya
-                        <br/>
-                        <small id="comments">Google Chrome is a free, open-source web browser developed by Google, released in 2008.Google Chrome is a free, open-source web browser developed by Google, released in 2008.</small>
-                      </td>
-                    </tr>
-                  </table><br/>
-                  <table>
-                      <tr rowspan="2">
-                        <td>
-                          <img src="../../assets/user.jpg" class="rounded-circle">
-                        </td>
-                        <td>
-                           Capgemini
-                          <br/>
-                          <small>Google Chrome is a free, open-source web browser developed by Google,</small>
-                        </td>
-                      </tr>
-                    </table>
+                  <tr rowspan="2">
+                    <td>
+                      <img src="../../assets/user.jpg" class="rounded-circle">
+                    </td>
+                    <td>
+                      Richa Madhupriya
+                      <br/>
+                      <small id="comments">Google Chrome is a free, open-source web browser developed by Google, released in 2008.Google Chrome
+                        is a free, open-source web browser developed by Google, released in 2008.</small>
+                    </td>
+                  </tr>
+                </table>
+                <br/>
+                <table>
+                  <tr rowspan="2">
+                    <td>
+                      <img src="../../assets/user.jpg" class="rounded-circle">
+                    </td>
+                    <td>
+                      Capgemini
+                      <br/>
+                      <small>Google Chrome is a free, open-source web browser developed by Google,</small>
+                    </td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
