--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -84,7 +84,7 @@
                   </div>
                 </div>
 
-                <a href="#">10 Comments</a>
+                <a href="#"  data-toggle="collapse" data-target="#comment">10 Comments</a>
               </div>
               <br/>
               <a href="#" class="btn btn-info btn-sm">
