--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -25,7 +25,7 @@
             <textarea class="form-control" rows="4" cols="40" placeholder="Write here"></textarea>
           </div>
           <div class="panel-footer">
-            <button class="btn btn-primary">POST</button>
+            <input type="button" class="btn btn-primary" value="POST" />
           </div>
         </div>
 
