--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -2,10 +2,12 @@
   <div class="row">
     <div class="col-sm-3">
       <app-profile></app-profile>
+      
     </div>
     <div class="col-sm-9">
 
       <div id="post">
+          <app-search></app-search>
         <div class="panel panel-default">
           <div class="panel-heading">
             <table>
